--- a/src/app/main/settings/accountsettings/accountSettings.html
+++ b/src/app/main/settings/accountsettings/accountSettings.html
@@ -13,36 +13,91 @@
                         <span class="caption-subject bold uppercase settings-heading"> Account Settings</span>
                     </div>
                     <div class="portlet light bordered border-rounded">
-                        <div class="portlet-title">
+                        <div class="portlet-title" style="border: hidden">
+                            <div class="caption ">
+<span class=" caption-subject  font-black  uppercase">Edit E-mail Address</span>
+                            <div class="caption-helper font-black font-sm"> </div>
+                            </div>
 
-                            <div class="actions">
-                                <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"> </li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
+                        </div>
+                        <div class="portlet-body form form-horizontal">
+<p> A valid e-mail id will be used to send you partner search mailers, member to member communication mailers and special offers.</p>
+<hr>
+                            <div class="form-group">
+
+                                <div class="col-md-12">
+                                    <label class=" uppercase  "> Email ID</label>
+
+                                    <input type="text" class="form-control input-rounded"
+                                           placeholder="Enter Id"></div>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+
+                                <div class="col-md-12">
+                                    <div class="pull-right">
+                                    <button type="button" class=" btn btn-default input-rounded"
+                                            ng-click="">
+                                        Save
+                                    </button>&nbsp;<button type="button" class=" btn red input-rounded"
+                                            ng-click="">
+                                        Reset
+                                    </button>
+                                    </div>
+
+                                </div>
+                                </div>
+                        </div>
+                    </div>
+
+                    <div class="portlet light bordered border-rounded">
+                        <div class="portlet-title" style="border: hidden">
+                            <div class="caption ">
+                                <span class=" caption-subject  font-black  uppercase">Change password</span>
+                                <div class="caption-helper font-black font-sm"> </div>
+                            </div>
+
+                        </div>
+                        <div class="portlet-body form form-horizontal">
+                            <p> Your password must have a minimum of 6 characters. We recomemended you chose an alphanumeric password.<span class=" font-green">E.g:password123</span></p>
+                            <hr>
+                            <div class="form-group">
+
+                                <div class="col-md-12">
+                                    <label class=" uppercase  "> Current password</label>
+
+                                    <input type="text" class="form-control input-rounded"
+                                           placeholder="Current Password"></div>
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase  "> New Password</label>
+
+                                    <input type="text" class="form-control input-rounded"
+                                           placeholder="New password"></div>
+                                <div class="col-md-6">
+                                    <label class=" uppercase  "> Confirm password</label>
+
+                                    <input type="text" class="form-control input-rounded"
+                                           placeholder="Confirm password"></div>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+
+                                <div class="col-md-12">
+                                    <div class="pull-right">
+                                        <button type="button" class=" btn btn-default input-rounded"
+                                                ng-click="">
+                                            Cancel
+                                        </button>&nbsp;<button type="button" class=" btn red input-rounded"
+                                                               ng-click="">
+                                        Change Password
+                                    </button>
+                                    </div>
+
                                 </div>
                             </div>
-                        </div>
-                        <div class="portlet-body form">
-
                         </div>
                     </div>
 
@@ -51,85 +106,6 @@
             </div>
             <!-- END PAGE TITLE -->
             <!-- BEGIN PAGE TOOLBAR -->
-            <div class="page-toolbar">
-                <!-- BEGIN THEME PANEL -->
-                <div class="btn-group btn-theme-panel">
-                    <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
-                        <i class="icon-settings"></i>
-                    </a>
-                    <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
-                        <div class="row">
-                            <div class="col-md-4 col-sm-4 col-xs-12">
-                                <h3>THEME</h3>
-                                <ul class="theme-colors">
-                                    <li class="theme-color theme-color-default" data-theme="default">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Dark Header</span>
-                                    </li>
-                                    <li class="theme-color theme-color-light active" data-theme="light">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Light Header</span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-8 col-sm-8 col-xs-12 seperator">
-                                <h3>LAYOUT</h3>
-                                <ul class="theme-settings">
-                                    <li> Theme Style
-                                        <select class="layout-style-option form-control input-small input-sm">
-                                            <option value="square">Square corners</option>
-                                            <option value="rounded" selected="selected">Rounded corners</option>
-                                        </select>
-                                    </li>
-                                    <li> Layout
-                                        <select class="layout-option form-control input-small input-sm">
-                                            <option value="fluid" selected="selected">Fluid</option>
-                                            <option value="boxed">Boxed</option>
-                                        </select>
-                                    </li>
-                                    <li> Header
-                                        <select class="page-header-option form-control input-small input-sm">
-                                            <option value="fixed" selected="selected">Fixed</option>
-                                            <option value="default">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Top Dropdowns
-                                        <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
-                                            <option value="light">Light</option>
-                                            <option value="dark" selected="selected">Dark</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Mode
-                                        <select class="sidebar-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Menu
-                                        <select class="sidebar-menu-option form-control input-small input-sm">
-                                            <option value="accordion" selected="selected">Accordion</option>
-                                            <option value="hover">Hover</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Position
-                                        <select class="sidebar-pos-option form-control input-small input-sm">
-                                            <option value="left" selected="selected">Left</option>
-                                            <option value="right">Right</option>
-                                        </select>
-                                    </li>
-                                    <li> Footer
-                                        <select class="page-footer-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- END THEME PANEL -->
-            </div>
             <!-- END PAGE TOOLBAR -->
         </div>
         <!-- END PAGE HEAD-->
