--- a/src/app/main/settings/contactFilters/contactFilters.html
+++ b/src/app/main/settings/contactFilters/contactFilters.html
@@ -9,136 +9,187 @@
             <div class="row">
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light bordered">
+                    <div class="portlet light bordered border-rounded">
                         <div class="portlet-title">
-                            <div class="caption font-red-sunglo">
-                                <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Contact Filters</span>
-                            </div>
-                            <div class="actions">
-                                <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"> </li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
+                            <div class="caption ">
+                                <span class=" caption-subject  font-black  uppercase" style="font-weight: 600;">Manage email Alert</span>
+
+                                <div class="caption-helper font-black font-sm">With the help of filters you can choose
+                                    who can contact you.
                                 </div>
                             </div>
-                        </div>
-                        <div class="portlet-body form">
 
                         </div>
-                    </div>
+                        <div class="portlet-body form form-horizontal">
 
-                </div>
+                            <div class="form-group ">
 
-            </div>
-            <!-- END PAGE TITLE -->
-            <!-- BEGIN PAGE TOOLBAR -->
-            <div class="page-toolbar">
-                <!-- BEGIN THEME PANEL -->
-                <div class="btn-group btn-theme-panel">
-                    <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
-                        <i class="icon-settings"></i>
-                    </a>
-                    <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
-                        <div class="row">
-                            <div class="col-md-4 col-sm-4 col-xs-12">
-                                <h3>THEME</h3>
-                                <ul class="theme-colors">
-                                    <li class="theme-color theme-color-default" data-theme="default">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Dark Header</span>
-                                    </li>
-                                    <li class="theme-color theme-color-light active" data-theme="light">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Light Header</span>
-                                    </li>
-                                </ul>
+                                <div class="col-md-12 margin-top-10">
+                                    <label class=" " style="font-weight:600 !important; "> Who can contact me:</label>
+                                </div>
+
+                                <div class="col-md-12 ">
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        Any one.</label>
+                                </div>
+
+                                <div class="col-md-12 ">
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="radio" icheckbox_flat-red class="icheck ">
+                                        Only members whome meet my criteria.</label>
+                                </div>
+
                             </div>
-                            <div class="col-md-8 col-sm-8 col-xs-12 seperator">
-                                <h3>LAYOUT</h3>
-                                <ul class="theme-settings">
-                                    <li> Theme Style
-                                        <select class="layout-style-option form-control input-small input-sm">
-                                            <option value="square">Square corners</option>
-                                            <option value="rounded" selected="selected">Rounded corners</option>
-                                        </select>
-                                    </li>
-                                    <li> Layout
-                                        <select class="layout-option form-control input-small input-sm">
-                                            <option value="fluid" selected="selected">Fluid</option>
-                                            <option value="boxed">Boxed</option>
-                                        </select>
-                                    </li>
-                                    <li> Header
-                                        <select class="page-header-option form-control input-small input-sm">
-                                            <option value="fixed" selected="selected">Fixed</option>
-                                            <option value="default">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Top Dropdowns
-                                        <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
-                                            <option value="light">Light</option>
-                                            <option value="dark" selected="selected">Dark</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Mode
-                                        <select class="sidebar-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Menu
-                                        <select class="sidebar-menu-option form-control input-small input-sm">
-                                            <option value="accordion" selected="selected">Accordion</option>
-                                            <option value="hover">Hover</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Position
-                                        <select class="sidebar-pos-option form-control input-small input-sm">
-                                            <option value="left" selected="selected">Left</option>
-                                            <option value="right">Right</option>
-                                        </select>
-                                    </li>
-                                    <li> Footer
-                                        <select class="page-footer-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                </ul>
+                            <hr class="mrgn">
+                            <h4>FILTERS</h4>
+
+                            <p>Select your preference and click update.</p>
+
+                            <div class="form-group">
+
+                                <div class="col-md-2">
+
+                                    <label class=" uppercase font-weight "> Age</label>
+
+                                    <select class="form-control input-rounded ">
+                                        <option>Select</option>
+                                        <option>21</option>
+                                        <option>22</option>
+                                        <option>23</option>
+                                        <option>24</option>
+                                        <option>25</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-2">
+                                    <label class=" uppercase font-weight "> &nbsp;</label>
+
+                                    <select class="form-control input-rounded ">
+                                        <option>Select</option>
+                                        <option>21</option>
+                                        <option>22</option>
+                                        <option>23</option>
+                                        <option>24</option>
+                                        <option>25</option>
+                                    </select>
+                                </div>
                             </div>
+
+                            <div class="form-group">
+                                <label class=" uppercase font-weight col-md-12 "> Marital Status</label>
+
+                                <div class="col-md-12">
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="unmarriedy">
+                                        Unmarried</label>
+
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="widow">
+                                        Widow</label>
+
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="divorced">
+                                        Divorced</label>
+                                    <label class="checkbox-inline" class="custon-text">
+                                        <input type="checkbox" icheckbox_flat-red class="icheck "
+                                               ng-model="awaitingDivorce">
+                                        Divorce awaiting</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Religion</label>
+
+                                    <select class="form-control input-rounded ">
+                                        <option>Select</option>
+                                        <option>Christian</option>
+                                        <option>Hindu</option>
+                                        <option>Muslim</option>
+                                        <option>Others</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> Mother toung</label>
+
+                                    <select class="form-control input-rounded ">
+                                        <option>Select Mother Toung</option>
+                                        <option>Malayalam</option>
+                                        <option>Tamil</option>
+                                        <option>Telengu</option>
+                                        <option>Kanada</option>
+                                        <option>English</option>
+                                        <option>Hindi</option>
+                                        <option>Others</option>
+
+
+                                    </select>
+                                </div>
+
+                            </div>
+                            <div class="form-group">
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight "> Cast</label>
+
+                                    <select class="form-control input-rounded ">
+                                        <option>Select</option>
+                                        <option>Cast 1</option>
+                                        <option>Cast 2</option>
+                                        <option>Cast 3</option>
+                                        <option>Cast 4</option>
+
+                                    </select>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class=" uppercase font-weight  "> Country</label>
+
+                                    <select class="form-control input-rounded ">
+                                        <option>Select</option>
+                                        <option>India</option>
+                                        <option>UAE</option>
+                                        <option>USA</option>
+                                        <option>Bharin</option>
+                                        <option>Qatar</option>
+                                        <option>Others</option>
+
+
+                                    </select>
+                                </div>
+
+                            </div>
+<hr>
+                            <div class="form-group">
+
+                                <div class="col-md-12">
+
+                                    <div class="pull-right">
+                                        <button type="button" class="uppercase btn red input-rounded"
+                                                ng-click=""> Update
+                                        </button>
+
+                                    </div>
+                                </div>
+
+                            </div>
+
+
                         </div>
+
                     </div>
+                    <!-- END PAGE TITLE -->
+                    <!-- BEGIN PAGE TOOLBAR -->
+                    <!-- END PAGE TOOLBAR -->
                 </div>
-                <!-- END THEME PANEL -->
+                <!-- END PAGE HEAD-->
+                <!-- BEGIN PAGE BREADCRUMB -->
+
+
+                <!-- END PAGE BASE CONTENT -->
             </div>
-            <!-- END PAGE TOOLBAR -->
+            <!-- END CONTENT BODY -->
         </div>
-        <!-- END PAGE HEAD-->
-        <!-- BEGIN PAGE BREADCRUMB -->
-
-
-
-
-        <!-- END PAGE BASE CONTENT -->
-    </div>
-    <!-- END CONTENT BODY -->
-</div>
