--- a/src/app/main/settings/manageEmail/manageEmail.html
+++ b/src/app/main/settings/manageEmail/manageEmail.html
@@ -9,133 +9,129 @@
             <div class="row">
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
-                    <div class="portlet light bordered">
-                        <div class="portlet-title">
-                            <div class="caption font-red-sunglo">
-                                <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Manage Email Alerts</span>
+                    <div class="portlet light bordered border-rounded">
+                        <div class="portlet-title" style="border: hidden">
+                            <div class="caption ">
+                                <span class=" caption-subject  font-black  uppercase" style="font-weight: 600;">Manage email Alert</span>
+
+                                <div class="caption-helper font-black font-sm"></div>
                             </div>
-                            <div class="actions">
-                                <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"> </li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
+
+                        </div>
+                        <div class="portlet-body form form-horizontal">
+                            <p> Listed below are the alerts you will receive from us through email.If you wish to
+                                unsubscribe any of the alert.Please de-select the alert.</p>
+                            <hr>
+                            <div class="form-group portlet-title">
+
+                                <div class="col-md-1 margin-top-10">
+
+                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                </div>
+                                <div class="col-md-10">
+
+                                    <label class=" " style="font-weight:600 !important; "> Daily MatchWatch
+                                        mailer</label>
+
+                                    <p class="" class="custon-text">
+                                        Recive matches as per your criteria.</p>
+                                </div>
+                            </div>
+                            <hr class="margn">
+                            <div class="form-group">
+
+                                <div class="col-md-1 margin-top-10">
+
+                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                </div>
+                                <div class="col-md-10">
+
+                                    <label class="   " style="font-weight:600 !important; "> Weekly Photo MatchWatch
+                                        mailer</label>
+
+                                    <p class="" class="custon-text">
+                                        Recive weekly matches with photos as per your criteria.</p>
+                                </div>
+                            </div>
+                            <hr class="margn">
+                            <div class="form-group">
+
+                                <div class="col-md-1 margin-top-10">
+
+                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                </div>
+                                <div class="col-md-10">
+
+                                    <label class="   " style="font-weight:600 !important; "> Weekly Horoscope MatchWatch
+                                        mailer</label>
+
+                                    <p class="" class="custon-text">
+                                        Recive weekly matches with horoscope as per your criteria.</p>
+                                </div>
+                            </div>
+                            <hr class="margn">
+                            <div class="form-group">
+
+                                <div class="col-md-1 margin-top-10">
+
+                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                </div>
+                                <div class="col-md-10">
+
+                                    <label class="   " style="font-weight:600 !important; "> Similar profiles
+                                        Email</label>
+
+                                    <p class="" class="custon-text">
+                                        An email containing profiles that are similar to the ones you have liked
+                                        recently.</p>
+                                </div>
+                            </div>
+                            <hr class="margn">
+                            <div class="form-group">
+
+                                <div class="col-md-1 margin-top-10">
+
+                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                </div>
+                                <div class="col-md-10">
+
+                                    <label class="   " style="font-weight:600 !important; "> Members who short listed
+                                        your profile</label>
+
+                                    <p class="" class="custon-text">
+                                        An email notification of Members who have recently short listed your
+                                        profile.</p>
+                                </div>
+                            </div>
+                            <hr class="margn">
+                            <div class="form-group">
+
+                                <div class="col-md-1 margin-top-10">
+
+                                    <input type="checkbox" icheckbox_flat-red class="icheck ">
+                                </div>
+                                <div class="col-md-10">
+
+                                    <label class="   " style="font-weight:600 !important; "> Auto Login</label>
+
+                                    <p class="" class="custon-text">
+                                        Auto login saves you the process of logging into your account with your e-mail
+                                        ID and password when you click the link on an email from us Update.</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="portlet-body form">
-
-                        </div>
                     </div>
+
 
                 </div>
 
             </div>
             <!-- END PAGE TITLE -->
             <!-- BEGIN PAGE TOOLBAR -->
-            <div class="page-toolbar">
-                <!-- BEGIN THEME PANEL -->
-                <div class="btn-group btn-theme-panel">
-                    <a href="javascript:;" class="btn dropdown-toggle" data-toggle="dropdown">
-                        <i class="icon-settings"></i>
-                    </a>
-                    <div class="dropdown-menu theme-panel pull-right dropdown-custom hold-on-click">
-                        <div class="row">
-                            <div class="col-md-4 col-sm-4 col-xs-12">
-                                <h3>THEME</h3>
-                                <ul class="theme-colors">
-                                    <li class="theme-color theme-color-default" data-theme="default">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Dark Header</span>
-                                    </li>
-                                    <li class="theme-color theme-color-light active" data-theme="light">
-                                        <span class="theme-color-view"></span>
-                                        <span class="theme-color-name">Light Header</span>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-8 col-sm-8 col-xs-12 seperator">
-                                <h3>LAYOUT</h3>
-                                <ul class="theme-settings">
-                                    <li> Theme Style
-                                        <select class="layout-style-option form-control input-small input-sm">
-                                            <option value="square">Square corners</option>
-                                            <option value="rounded" selected="selected">Rounded corners</option>
-                                        </select>
-                                    </li>
-                                    <li> Layout
-                                        <select class="layout-option form-control input-small input-sm">
-                                            <option value="fluid" selected="selected">Fluid</option>
-                                            <option value="boxed">Boxed</option>
-                                        </select>
-                                    </li>
-                                    <li> Header
-                                        <select class="page-header-option form-control input-small input-sm">
-                                            <option value="fixed" selected="selected">Fixed</option>
-                                            <option value="default">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Top Dropdowns
-                                        <select class="page-header-top-dropdown-style-option form-control input-small input-sm">
-                                            <option value="light">Light</option>
-                                            <option value="dark" selected="selected">Dark</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Mode
-                                        <select class="sidebar-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Menu
-                                        <select class="sidebar-menu-option form-control input-small input-sm">
-                                            <option value="accordion" selected="selected">Accordion</option>
-                                            <option value="hover">Hover</option>
-                                        </select>
-                                    </li>
-                                    <li> Sidebar Position
-                                        <select class="sidebar-pos-option form-control input-small input-sm">
-                                            <option value="left" selected="selected">Left</option>
-                                            <option value="right">Right</option>
-                                        </select>
-                                    </li>
-                                    <li> Footer
-                                        <select class="page-footer-option form-control input-small input-sm">
-                                            <option value="fixed">Fixed</option>
-                                            <option value="default" selected="selected">Default</option>
-                                        </select>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- END THEME PANEL -->
-            </div>
             <!-- END PAGE TOOLBAR -->
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BREADCRUMB -->
-
-
 
 
         <!-- END PAGE BASE CONTENT -->
